# gamedev-articles

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Projects.cmake  README.md  init_submodules.sh
data/bvh/: example3.bvh  walk1.bvh
data/shaders/: shader1.vert  shader3.frag  shader3.vert
data/texture-101/: shader4.frag
lib_bin/glew-2.1.0/macos/lib/: libGLEW.2.1.0.dylib
lib_bin/glew-2.1.0/macos/lib/pkgconfig/: glew.pc
projects/: CMakeLists.txt
projects/alure-101/: CMakeLists.txt  README.md  main.cpp
projects/assimp-101/: CMakeLists.txt  README.md  main.cpp
projects/assimp-101/shaders/: assimp-101.vert
projects/bvh-loader/: CMakeLists.ex.txt  CMakeLists.txt  README.md  basic-triangle.cpp  bvh.cpp  bvh.h  bvhloader.cpp  bvhloader.h  main.cpp
projects/bvh-loader/shaders/: bvh-loader-shader.frag
projects/eigen-101/: CMakeLists.txt  main.cpp
projects/freetype-101/: CMakeLists.txt  main.cpp
projects/freetype-101/shaders/: freetype-101.frag  freetype-101.vert  v3f-t2f-c4f.vert
projects/persp-triangle/: CMakeLists.txt  main.cpp
projects/physfs-101/: CMakeLists.txt  README.md  main.cpp
projects/physfs-102/: CMakeLists.txt  README.md  main.cpp  physfs_assimp_iostream.cpp  physfs_assimp_iostream.h  physfs_assimp_iosystem.cpp  physfs_assimp_iosystem.h  physfs_devil.cpp  physfs_devil.h
projects/physfs-103/: CMakeLists.txt  README.md  alure_physfs.h  main.cpp
projects/texture-101/: CMakeLists.txt  README.md  main.cpp
projects/texture-101/shaders/: texture-101.vert
src/: CMakeLists.txt  camera.h  glcheck.cpp  glcheck.h  meshdata.cpp  meshdata.h  meshgraphics.cpp  meshgraphics.h  meshloader.cpp  meshloader.h  shader.cpp  shader.h  textureloader.cpp  textureloader.h  util.h
src/bvh/: bvh.cpp  bvh.h
