
## Basic projects
add_subdirectory(persp-triangle)
add_subdirectory(texture-101)
add_subdirectory(bvh-loader)
add_subdirectory(freetype-101)
add_subdirectory(assimp-101)

#set(DESKTOP_PROJECTS
#      persp-triangle
#      texture-101
#      bvh-loader)

#foreach (proj ${DESKTOP_PROJECTS})
#  message("Adding project: ${proj}")
#  add_subdirectory(${proj})
#endforeach (proj)
